--- a/test/fixtures/reports.yml
+++ b/test/fixtures/reports.yml
@@ -1,11 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  user: one
   title: MyString
   content: MyText
+  user: alice
 
 two:
-  user: two
+  user: bob
   title: MyString
   content: MyText
